--- a/Desafios/d12/estilo/style.css
+++ b/Desafios/d12/estilo/style.css
@@ -59,6 +59,10 @@ section {
     font-size: 3.5vw;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color: white;
     color: black;
@@ -67,12 +71,26 @@ section.normal {
 section.imagem {
     background-color: rgb(77, 77, 77);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.521);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.315);
+    background-color: rgba(0, 0, 0, 0.514);
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+}
+
+section#img02 {
+    background-image: url(../imagens/background002.jpg);
+    background-position: right center;
 }
 
 footer {
@@ -80,4 +98,8 @@ footer {
     color: white;
     text-align: center;
     padding: 7px;
+}
+
+footer > p {
+    font-size: 2.5vw;
 }
